attached_assets/Pasted--Cloning-from-https-github-com-draiimon-PanicSense-Checking-out-commit-d2ff74b4326c253d7a852-1745593127222.txt
> Cloning from https://github.com/draiimon/PanicSense
==> Checking out commit d2ff74b4326c253d7a8527df7a70b24fa4ecf779 in branch main
==> Requesting Node.js version 18
==> Using Node.js version 18.20.8 via /opt/render/project/src/.nvmrc
==> Docs on specifying a Node.js version: https://render.com/docs/node-version
==> Using Bun version 1.1.0 (default)
==> Docs on specifying a bun version: https://render.com/docs/bun-version
==> Running build command './render-build.sh'...
Installing all dependencies...
added 583 packages, and audited 584 packages in 13s
80 packages are looking for funding
  run `npm fund` for details
7 moderate severity vulnerabilities
To address issues that do not require attention, run:
  npm audit fix
To address all issues (including breaking changes), run:
  npm audit fix --force
Run `npm audit` for details.
Building the application...
> rest-express@1.0.0 build
> vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist
vite v5.4.18 building for production...
transforming...
✓ 3271 modules transformed.
rendering chunks...
[plugin:vite:reporter] [plugin vite:reporter] 
(!) /opt/render/project/src/client/src/lib/api.ts is dynamically imported by /opt/render/project/src/client/src/pages/evaluation.tsx, /opt/render/project/src/client/src/pages/evaluation.tsx, /opt/render/project/src/client/src/pages/evaluation.tsx but also statically imported by /opt/render/project/src/client/src/components/data/fixed-data-table.tsx, /opt/render/project/src/client/src/components/evaluation/confusion-matrix.tsx, /opt/render/project/src/client/src/components/file-uploader-button.tsx, /opt/render/project/src/client/src/components/realtime/realtime-monitor.tsx, /opt/render/project/src/client/src/components/realtime/text-processor.tsx, /opt/render/project/src/client/src/components/sentiment-feedback.tsx, /opt/render/project/src/client/src/components/upload-progress-modal.tsx, /opt/render/project/src/client/src/context/disaster-context.tsx, /opt/render/project/src/client/src/pages/evaluation.tsx, /opt/render/project/src/client/src/pages/raw-data.tsx, dynamic import will not move module into another chunk.
computing gzip size...
../dist/public/index.html                                    3.56 kB │ gzip:   1.08 kB
../dist/public/assets/upload-disaster-data-DkOvvLH4.png    292.29 kB
../dist/public/assets/analyze-sentiment-Vh3jCVDI.png       409.09 kB
../dist/public/assets/real-time-monitoring-CpGDf6oY.png    786.79 kB
../dist/public/assets/geographic-analysis-C9Jw72vh.png   1,043.10 kB
../dist/public/assets/index-J8Bo7enu.css                   203.11 kB │ gzip:  36.16 kB
../dist/public/assets/leaflet-src-DP8PLqsD.js              149.98 kB │ gzip:  43.55 kB
../dist/public/assets/index-CNyM1Lwi.js                  2,200.76 kB │ gzip: 555.63 kB
(!) Some chunks are larger than 500 kB after minification. Consider:
- Using dynamic import() to code-split the application
- Use build.rollupOptions.output.manualChunks to improve chunking: https://rollupjs.org/configuration-options/#output-manualchunks
- Adjust chunk size limit for this warning via build.chunkSizeWarningLimit.
✓ built in 11.23s
  dist/index.js  266.0kb
⚡ Done in 15ms
Build completed!
==> Uploading build...
==> Uploaded in 9.3s. Compression took 2.7s
==> Build successful 🎉
==> Deploying...
==> Running 'npm run render'
> rest-express@1.0.0 render
> NODE_ENV=production node server/index-wrapper.js
file:///opt/render/project/src/server/index-wrapper.js:13
import { cleanupAndExit } from './index.js';
         ^^^^^^^^^^^^^^
SyntaxError: The requested module './index.js' does not provide an export named 'cleanupAndExit'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:191:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)
Node.js v18.20.8
==> Exited with status 1
==> Common ways to troubleshoot your deploy: https://render.com/docs/troubleshooting-deploys
==> Running 'npm run render'
> rest-express@1.0.0 render
> NODE_ENV=production node server/index-wrapper.js
file:///opt/render/project/src/server/index-wrapper.js:13
import { cleanupAndExit } from './index.js';
         ^^^^^^^^^^^^^^
SyntaxError: The requested module './index.js' does not provide an export named 'cleanupAndExit'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:191:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)
Node.js v18.20.8